--- a/ticket-platform-milestone/resources/templates/operator/profile.html
+++ b/ticket-platform-milestone/resources/templates/operator/profile.html
@@ -61,7 +61,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container text-center">
-            <!-- Aggiungi contenuto del footer se necessario -->
+			<p>&copy; 2024 Davimut</p>
         </div>
     </footer>
     
