--- a/ticket-platform-milestone/resources/templates/operator/dashboard.html
+++ b/ticket-platform-milestone/resources/templates/operator/dashboard.html
@@ -9,21 +9,38 @@
     <link rel="stylesheet" href="/css/styles.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    
+		<style>
+		    .footer {
+		        background-color: #343a40;
+		        color: white;
+		        padding: 10px 0;
+		        position: absolute;
+		        bottom: 0;
+		        width: 100%;
+		    }
+		    .footer a {
+		        color: #ffffff;
+		        text-decoration: none;
+		    }
+		    .footer a:hover {
+		        text-decoration: underline;
+		    }
+		
+        header nav a {
+            color: #fff;
+            margin-right: 15px;
+            font-size: 0.9rem; /* Smaller font size */
+        }
+    </style>
 </head>
-<style>
-header nav a {
-    color: #fff;
-    margin-right: 15px;
-    font-size: 0.9rem; /* Smaller font size */
-}
-</style>
 <body>
     <header class="bg-dark text-white mb-4 py-3">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
                 <h1 class="h3">Benvenuto Operatore</h1>
                 <nav class="nav">
-                    <a class="nav-link" th:href="@{/operator/profile/{id}/edit(id=${userId})}">Profilo Operatore</a>
+                    <a class="nav-link" th:href="@{/operator/profile/{id}(id=${userId})}">Profilo Operatore</a>
                     <a class="nav-link" href="http://localhost:8080/logout">Logout</a>
                 </nav>
             </div>
@@ -63,12 +80,12 @@ header nav a {
         </section>
     </main>
 
-    <footer class="bg-light text-center py-3">
-        <div class="container">
-            <p class="mb-0">&copy; 2024 Davimut</p>
-        </div>
-    </footer>
-
+	<!-- Footer -->
+	  <footer class="footer">
+	      <div class="container text-center">
+			<p>&copy; 2024 Davimut</p>
+	      </div>
+	  </footer>
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
